--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.98.4",
+    "@supabase/supabase-js": "^2.89.0",
     "axios": "^1.13.2",
     "bs58": "^6.0.0",
     "clsx": "^2.1.1",
